@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-07-31 Steve
+	* Added heavy flavor overlap removal decision to Event as hfor
+	* Tagging SusyNtuple-00-00-18
+
 2012-07-30 Steve
 	* Added flag for toggling tau selection
 	* Added functions for selecting taus
